[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/DamageLight.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Boss2.gd" type="Script" id=2]
[ext_resource path="res://scenes/Enemies/EvilDragon.tscn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 5.4, 10.8, 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1.4, 10.8, 1.5 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 19, 11, 1 )

[sub_resource type="Animation" id=3]
resource_name = "spawn"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Dragon:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.4, 3.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -40, 50, 40 ), Vector3( 40, 50, 40 ), Vector3( 0, 16, -50 ), Vector3( 0, 16, 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Dragon:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.4, 3.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 90, -30 ), Vector3( 0, 90, -30 ), Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[node name="Boss" type="Area" groups=[
"Enemies",
]]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )
hp = 25
vulnerable = false

[node name="Dragon" parent="." instance=ExtResource( 3 )]
transform = Transform( -1.41093e-07, -8.14603e-08, 1, -0.5, 0.866025, 0, -0.866025, -0.5, -1.62921e-07, -40, 50, 40 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 16.1, 20 )
shape = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 16.1, 22.5 )
shape = SubResource( 4 )

[node name="AgroArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5 )

[node name="CollisionShape" type="CollisionShape" parent="AgroArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11, -14 )
shape = SubResource( 2 )

[node name="DamageLight" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 18.9, 21.8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/spawn = SubResource( 3 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 1.5
[connection signal="dead" from="." to="Dragon" method="_on_Boss_dead"]
[connection signal="body_entered" from="AgroArea" to="." method="_on_AgroArea_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="ShootTimer" to="Dragon" method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
